--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,7 +204,7 @@ footer {
     }
     
     footer {
-        width: 100%
+        width: 100%;
         position: fixed;
     }
 }
@@ -249,7 +249,7 @@ footer {
     }
     
     footer {
-        width: 100%
+        width: 100%;
         position: fixed;
     }
 }
@@ -260,25 +260,34 @@ body {
 }
 
 .header {
-    width: 100%;
-    float: none;
+    width: 640px;
+    float: left;
     position: static;
 }
 
 #name {
-    width: 100%;
+    width: 640px;
+    padding: 20px 0px;
 }
 
 .header-right {
     width: 100%;
-    top: 50%;
-    left: 39%;
-    padding: 20px;
+    position: static;
+    padding: 20px 0px;
+    right: 0px;
+    text-align: center;
 }
 
+.header a {
+    float: none;
+}
 
 .content {
     width: 100%;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-right: 0px;
+    border-left: 0px;
 }
 
 #my-photo {
@@ -302,9 +311,12 @@ textarea {
 }
 
 .grid-container {
-    width: 100%;
+    width: 50%;
     grid-template-columns: 250px;
-    left: 28%;
+    padding: 30px 0px;
+    display: block;
+    overflow: auto;
+    margin: auto;
 }
 
 .grid-item {
@@ -319,9 +331,12 @@ img {
 footer {
     width: 100%;
     position: relative;
+    padding: 20px 0px;
 }
 
 #special-footer {
     position: absolute;
 }
 } 
+
+/* TODO add padding */
