--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,13 +260,13 @@ body {
 }
 
 .header {
-    width: 640px;
+    width: 100%;
     float: left;
     position: static;
 }
 
 #name {
-    width: 640px;
+    width: 100%;
     padding: 20px 0px;
 }
 
