--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,9 @@ footer {
     
     .grid-container {
         width: 100%;
+        padding: 0px;
+        grid-template-columns: 250px 250px;
+        justify-content: center;
     }
     
     .grid-item {
@@ -189,10 +192,14 @@ footer {
     }
 
     .header-right {
-        right: -8px;
+        right: 0px;
     }
     .content {
         width: 100%;
+        border-top: 1px solid #ddd;
+        border-bottom: 1px solid #ddd;
+        border-right: none;
+        border-left: none;
     }
     
    
@@ -206,6 +213,7 @@ footer {
     footer {
         width: 100%;
         position: fixed;
+        padding: 15px 0px;
     }
 }
 
@@ -219,25 +227,27 @@ footer {
 
     }
     
+    .header a {
+        margin-right: 0px;
+    }
     .grid-container {
         width: 100%;
-        grid-template-columns: 200px 200px 200px;
-        grid-column-gap: 50px;
+        grid-template-columns: 250px 250px;
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 20px;
     }
     
     .grid-item {
         width: 100%;
     }
 
-    img {
-        width: 200px;
-    }
-
-    .header-right {
-        right: -8px;
-    }
     .content {
         width: 100%;
+        border-top: 1px solid #ddd;
+        border-bottom: 1px solid #ddd;
+        border-right: none;
+        border-left: none;
     }
     
    
@@ -251,6 +261,9 @@ footer {
     footer {
         width: 100%;
         position: fixed;
+        padding-top: 15px;
+        padding-left: 0px;
+        padding-right: 0px;
     }
 }
 
