--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,356 +1,348 @@
 body {
-    background-image: url("../images/circles-light.png");
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  background-image: url("../images/circles-light.png");
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 .header {
-    position: relative;
-    background-color: #fff;
-    width: 960px;
-    margin: 0 auto;
-    font-family: 'Georgia', Times, Times New Roman, serif;
+  position: relative;
+  background-color: #fff;
+  width: 960px;
+  margin: 0 auto;
+  font-family: "Georgia", Times, Times New Roman, serif;
 }
 
 .header a {
-    float: left;
-    color: black;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    line-height: 1;
-    margin-right: 15px;
-    height: 16px;
+  float: left;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  line-height: 1;
+  margin-right: 15px;
+  height: 16px;
 }
 
 #name {
-    float: left;
-    text-align: center;
-    padding: 20px;
-    line-height: 30px;
-    background-color: #4aaaa5;
-    color: white;
-    position: relative; /*might take this out*/
-    font-size: 20px;
-    font-weight: bolder;
-    }
-
+  float: left;
+  text-align: center;
+  padding: 20px;
+  line-height: 30px;
+  background-color: #4aaaa5;
+  color: white;
+  position: relative; /*might take this out*/
+  font-size: 20px;
+  font-weight: bolder;
+}
 
 .header-right {
-    float: right;
-    position: relative;
-    top: 30px;
-    right: -15px;
-    opacity: 0.3;
+  float: right;
+  position: relative;
+  top: 30px;
+  right: -15px;
+  opacity: 0.3;
 }
 
 .right-border {
-    border-right: 1px solid #ccc;
-    padding-right: 15px;
+  border-right: 1px solid #ccc;
+  padding-right: 15px;
 }
 
 .fixed-font:hover {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .bottom-border {
-    border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
 }
 
 .grid-container {
-    display: grid;
-    grid-row-gap: 0px;
-    grid-template-columns: 250px 250px 250px;
-    grid-column-gap: 74px;
-    position: relative;
-    padding: 30px;
+  display: grid;
+  grid-row-gap: 0px;
+  grid-template-columns: 250px 250px 250px;
+  grid-column-gap: 74px;
+  position: relative;
+  padding: 30px;
 }
 
 .grid-item:hover {
-    opacity: 0.4;
+  opacity: 0.4;
 }
 
 .bottom-center {
-    position: relative;
-    text-align: center;
-    background-color: #4aaaa5;
-    color: white;
-    padding: 12px;
-    text-align: center;
-    bottom: 50px;
+  position: relative;
+  text-align: center;
+  background-color: #4aaaa5;
+  color: white;
+  padding: 12px;
+  text-align: center;
+  bottom: 50px;
 }
 
 .content {
-    width: 960px;
-    margin: 0 auto;
-    background-color: #fff;
-    margin-top: 20px;
-    clear: both;
-    border: 1px solid #ddd;
+  width: 960px;
+  margin: 0 auto;
+  background-color: #fff;
+  margin-top: 20px;
+  clear: both;
+  border: 1px solid #ddd;
 }
 
 hr {
-    margin-left: 30px;
-    margin-right: 30px;
-    opacity: 0.3;
-
+  margin-left: 30px;
+  margin-right: 30px;
+  opacity: 0.3;
 }
 
 p {
-    line-height: 1.5;
+  line-height: 1.5;
 }
 
 p a {
-    color: black;
-    text-decoration: underline;
+  color: black;
+  text-decoration: underline;
 }
 
 .form-length {
-    display: block;
-    margin-bottom: 15px;
-    margin-top: 5px;
-    width: 890px;
+  display: block;
+  margin-bottom: 15px;
+  margin-top: 5px;
+  width: 890px;
 }
 
 textarea {
-    width: 890px;
-    height: 130px;
-    margin-top: 5px;
+  width: 890px;
+  height: 130px;
+  margin-top: 5px;
 }
 
 #submit {
-    text-align: center;
-    padding: 10px;
-    line-height: 5px;
-    background-color: #4aaaa5;
-    color: #fff;
-    margin-top: 10px;
-    border: none;
-    text-decoration: none;
-    cursor: pointer;
+  text-align: center;
+  padding: 10px;
+  line-height: 5px;
+  background-color: #4aaaa5;
+  color: #fff;
+  margin-top: 10px;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .box {
-    position: relative;
-    padding: 30px;
+  position: relative;
+  padding: 30px;
 }
 
 h2 {
-    font-size: 22px;
-    color: #4aaaa5;
-    position: relative;
-    padding: 20px;
-    margin-left: 7px;
-    margin-top: 10px;
-    font-weight: bold;
+  font-size: 22px;
+  color: #4aaaa5;
+  position: relative;
+  padding: 20px;
+  margin-left: 7px;
+  margin-top: 10px;
+  font-weight: bold;
 }
 
 #my-photo {
-    float: left;
-    padding-right: 15px;
-    padding-bottom: 15px;
-    margin-top: 10px;
+  float: left;
+  padding-right: 15px;
+  padding-bottom: 15px;
+  margin-top: 10px;
 }
 
 footer {
-    background-color: #666;
-    text-align: center;
-    line-height: 1px;
-    padding: 15px; 
-    border-top: 10px solid #4aaaa5;
-    position: fixed;
-    bottom: 0px;
-    right: 0px;
-    left: 0px;  
-    font-size: 10px;
+  background-color: #666;
+  text-align: center;
+  line-height: 1px;
+  padding: 15px;
+  border-top: 10px solid #4aaaa5;
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  left: 0px;
+  font-size: 10px;
 }
 
 .clearfix::after {
-    content: "";
-    display: block;
-    clear: both;
+  content: "";
+  display: block;
+  clear: both;
 }
 
 @media screen and (max-width: 980px) {
-    body {
-        width: 100%;
-    }
-    
-    .header {
-        width: 100%;
+  body {
+    width: 100%;
+  }
 
-    }
-    
-    .grid-container {
-        width: 100%;
-        padding: 0px;
-        grid-template-columns: 250px 250px;
-        justify-content: center;
-    }
-    
-    .grid-item {
-        width: 100%;
-    }
+  .header {
+    width: 100%;
+  }
 
-    .header-right {
-        right: 0px;
-    }
-    .content {
-        width: 100%;
-        border-top: 1px solid #ddd;
-        border-bottom: 1px solid #ddd;
-        border-right: none;
-        border-left: none;
-    }
-    
-   
-    .form-length {
-        width: 100%;
-    }
-    textarea {
-        width: 100%;
-    }
-    
-    footer {
-        width: 100%;
-        position: fixed;
-        padding: 15px 0px;
-    }
+  .grid-container {
+    width: 100%;
+    padding: 0px;
+    grid-template-columns: 250px 250px;
+    justify-content: center;
+  }
+
+  .grid-item {
+    width: 100%;
+  }
+
+  .header-right {
+    right: 0px;
+  }
+  .content {
+    width: 100%;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-right: none;
+    border-left: none;
+  }
+
+  .form-length {
+    width: 100%;
+  }
+  textarea {
+    width: 100%;
+  }
+
+  footer {
+    width: 100%;
+    position: fixed;
+    padding: 15px 0px;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    body {
-        width: 100%;
-    }
-    
-    .header {
-        width: 100%;
+  body {
+    width: 100%;
+  }
 
-    }
-    
-    .header a {
-        margin-right: 0px;
-    }
-    .grid-container {
-        width: 100%;
-        grid-template-columns: 250px 250px;
-        padding-left: 0px;
-        padding-right: 0px;
-        padding-top: 20px;
-    }
-    
-    .grid-item {
-        width: 100%;
-    }
+  .header {
+    width: 100%;
+  }
 
-    .content {
-        width: 100%;
-        border-top: 1px solid #ddd;
-        border-bottom: 1px solid #ddd;
-        border-right: none;
-        border-left: none;
-    }
-    
-    p {
-        line-height: 1.25;
-    }
-   
-    .form-length {
-        width: 100%;
-    }
-    textarea {
-        width: 100%;
-    }
-    
-    footer {
-        width: 100%;
-        position: fixed;
-        padding-top: 15px;
-        padding-left: 0px;
-        padding-right: 0px;
-    }
+  .header a {
+    margin-right: 0px;
+  }
+  .grid-container {
+    width: 100%;
+    grid-template-columns: 250px 250px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 20px;
+  }
+
+  .grid-item {
+    width: 100%;
+  }
+
+  .content {
+    width: 100%;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-right: none;
+    border-left: none;
+  }
+
+  p {
+    line-height: 1.25;
+  }
+
+  .form-length {
+    width: 100%;
+  }
+  textarea {
+    width: 100%;
+  }
+
+  footer {
+    width: 100%;
+    position: fixed;
+    padding-top: 15px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
 }
 
 @media screen and (max-width: 640px) {
-body {
+  body {
     width: 100%;
-}
+  }
 
-.header {
+  .header {
     width: 100%;
     float: left;
     position: static;
-}
+  }
 
-#name {
+  #name {
     width: 100%;
     padding: 20px 0px;
-}
+  }
 
-.header-right {
+  .header-right {
     width: 100%;
     position: static;
     padding: 20px 0px;
     right: 0px;
     text-align: center;
-}
+  }
 
-.header a {
+  .header a {
     float: none;
-}
+  }
 
-.content {
+  .content {
     width: 100%;
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
     border-right: 0px;
     border-left: 0px;
-}
+  }
 
-#my-photo {
-    width: 100%;;
+  #my-photo {
+    width: 100%;
     position: relative;
     height: 100%;
-}
+  }
 
-p {
+  p {
     width: 100%;
     clear: both;
-}
+  }
 
-.form-length {
+  .form-length {
     width: 100%;
-}
-textarea {
+  }
+  textarea {
     width: 100%;
-}
+  }
 
-.grid-container {
+  .grid-container {
     width: 50%;
     grid-template-columns: 250px;
     padding: 30px 0px;
     display: block;
     overflow: auto;
     margin: auto;
-}
+  }
 
-.grid-item {
+  .grid-item {
     width: 100%;
-}
+  }
 
-img {
+  img {
     width: 100%;
-}
+  }
 
-
-footer {
+  footer {
     width: 100%;
     position: relative;
     padding: 20px 0px;
-}
+  }
 
-#special-footer {
+  #special-footer {
     position: relative;
+  }
 }
-} 
-
-/* TODO add padding */
